--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  flex-direction: column;
+  display: flex;
+  text-align: center;
 }
 
 img {
@@ -16,6 +19,9 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  padding: 10px;
 }
 
 input {
@@ -24,3 +30,65 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+  font-weight: bold;
+}
+
+/* .right-links,
+.left-links,
+.header,
+.footer {
+  display: flex;
+  gap: 16px;
+  padding: 8px;
+  margin: 0px;
+} */
+
+.right-links,
+.left-links {
+  flex: 1;
+  display: flex;
+  gap: 16px;
+  padding: 8px;
+  margin: 0;
+  align-items: flex-start;
+}
+
+.right-links {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.footer {
+  display: flex;
+  background-color: lightgray;
+  padding: 10px;
+  margin: 0;
+  align-items: center;
+  justify-items: center;
+}
+
+.header {
+  display: flex;
+  justify-content: flex-start;
+  padding: 10px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+
+
+
